# inaturalist-fish-downloader

./: .gitignore  README.md  check_coverage.py  check_images.py  extract_species_from_place.py  family.txt  fish_downloader.py  improvement.txt  package-lock.json  prepare_fish_split.py  pyproject.toml  redownload.txt  requirements-dev.txt  requirements-server.txt  requirements-torch-cu128.txt  requirements.txt  species.txt  species_counts.tsv  test.txt  train.txt  val.txt
configs/: cascade.yaml  default.yaml  sam3.yaml  smoke.yaml  strict.yaml  yolo.yaml
configs/filters/: annotation_example.yaml  commercial_licenses.yaml  not_female.yaml  not_juvenile.yaml  not_male.yaml  research_alive.yaml
inaturalist_downloader/: __init__.py  check_coverage.py  check_images.py  downloader.py  species_extractor.py  split.py
inaturalist_downloader/commands/: benchmark_croppers.py  check_coverage.py  check_images.py  download.py  extract_species.py  prepare_split.py
inaturalist_downloader/common/: config.py  inat.py  manifest.py  net.py  utils.py
inaturalist_downloader/dataset/: checks.py  config.py  splitter.py
inaturalist_downloader/download/: candidates.py  cli.py  clip_filter.py  crop_benchmark.py  detection.py  image_quality.py
inaturalist_downloader/species/: api.py  config.py  extraction.py  io.py
manifests/: species_summary.tsv
tests/: test_crop_benchmark.py  test_download_filter_config.py
