[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inaturalist-downloader"
version = "0.1.0"
description = "Utilities for extracting fish species from iNaturalist and building image datasets."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
  "omegaconf>=2.3",
]

[project.optional-dependencies]
yolo = [
  "ultralytics>=8",
]
clip = [
  "transformers>=4.40",
  "torch>=2.7",
]
sam3 = [
  "einops>=0.8",
  "pycocotools>=2.0.11",
  "sam3>=0.1.0",
  "torch>=2.7",
  "torchvision>=0.22",
  "triton>=3; platform_system == 'Linux'",
]
all = [
  "einops>=0.8",
  "pycocotools>=2.0.11",
  "sam3>=0.1.0",
  "torch>=2.7",
  "torchvision>=0.22",
  "transformers>=4.40",
  "triton>=3; platform_system == 'Linux'",
  "ultralytics>=8",
]
dev = [
  "Pillow>=10",
  "omegaconf>=2.3",
]

[project.scripts]
inat-download = "inaturalist_downloader.commands.download:main"
inat-extract-species = "inaturalist_downloader.commands.extract_species:main"
inat-prepare-split = "inaturalist_downloader.commands.prepare_split:main"
inat-check-images = "inaturalist_downloader.commands.check_images:main"
inat-check-coverage = "inaturalist_downloader.commands.check_coverage:main"
inat-benchmark-croppers = "inaturalist_downloader.commands.benchmark_croppers:main"

[tool.setuptools.packages.find]
include = ["inaturalist_downloader*"]
